src/test/ui/statics/uninhabited-static.stderr
error: static of uninhabited type
  --> $DIR/uninhabited-static.rs:6:5
   |
LL |     static VOID: Void;
   |     ^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/uninhabited-static.rs:2:9
   |
LL | #![deny(uninhabited_static)]
   |         ^^^^^^^^^^^^^^^^^^
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #74840 <https://github.com/rust-lang/rust/issues/74840>
   = note: uninhabited statics cannot be initialized, and any access would be an immediate error

error: static of uninhabited type
  --> $DIR/uninhabited-static.rs:8:5
   |
LL |     static NEVER: !;
   |     ^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #74840 <https://github.com/rust-lang/rust/issues/74840>
   = note: uninhabited statics cannot be initialized, and any access would be an immediate error

error: static of uninhabited type
  --> $DIR/uninhabited-static.rs:12:1
   |
LL | static VOID2: Void = unsafe { std::mem::transmute(()) };
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #74840 <https://github.com/rust-lang/rust/issues/74840>
   = note: uninhabited statics cannot be initialized, and any access would be an immediate error

error: static of uninhabited type
  --> $DIR/uninhabited-static.rs:16:1
   |
LL | static NEVER2: Void = unsafe { std::mem::transmute(()) };
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #74840 <https://github.com/rust-lang/rust/issues/74840>
   = note: uninhabited statics cannot be initialized, and any access would be an immediate error

error[E0080]: it is undefined behavior to use this value
  --> $DIR/uninhabited-static.rs:12:1
   |
LL | static VOID2: Void = unsafe { std::mem::transmute(()) };
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered a value of uninhabited type Void
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: 0, align: 1) {}

error[E0080]: it is undefined behavior to use this value
  --> $DIR/uninhabited-static.rs:16:1
   |
LL | static NEVER2: Void = unsafe { std::mem::transmute(()) };
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered a value of uninhabited type Void
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: 0, align: 1) {}

warning: the type `Void` does not permit zero-initialization
  --> $DIR/uninhabited-static.rs:12:31
   |
LL | static VOID2: Void = unsafe { std::mem::transmute(()) };
   |                               ^^^^^^^^^^^^^^^^^^^^^^^
   |                               |
   |                               this code causes undefined behavior when executed
   |                               help: use `MaybeUninit<T>` instead, and only call `assume_init` after initialization is done
   |
   = note: `#[warn(invalid_value)]` on by default
   = note: enums with no variants have no valid value

warning: the type `Void` does not permit zero-initialization
  --> $DIR/uninhabited-static.rs:16:32
   |
LL | static NEVER2: Void = unsafe { std::mem::transmute(()) };
   |                                ^^^^^^^^^^^^^^^^^^^^^^^
   |                                |
   |                                this code causes undefined behavior when executed
   |                                help: use `MaybeUninit<T>` instead, and only call `assume_init` after initialization is done
   |
   = note: enums with no variants have no valid value

error: aborting due to 6 previous errors; 2 warnings emitted

For more information about this error, try `rustc --explain E0080`.
